# vulkan_sdl3_imgui_start

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: anyhit.rahit  closesthit.rchit  miss.rmiss  miss_secondary.rmiss  raygen.rgen  shadow.rahit  shadow.rmiss  shadow_miss.rmiss  sphere.frag  sphere.vert
src/: AccelerationStructures.cpp  AccelerationStructures.h  ArcBallCamera.cpp  ArcBallCamera.h  GeomCreate.cpp  GeomCreate.h  GraphicsModule.cpp  GraphicsModule.h  HelpStructures.h  ImGuiModule.cpp  ImGuiModule.h  MainLoop.cpp  MainLoop.h  RayTracingModule.cpp  RayTracingModule.h  VulkanCheck.h  VulkanHelperMethods.cpp  VulkanHelperMethods.h  main.cpp  shared_with_shaders.h
src/framework/: camera.cpp  camera.h  vulkanapp.cpp  vulkanapp.h  vulkanhelpers.cpp  vulkanhelpers.h
